osha.theme Changelog
====================

1.4.25 (unreleased)
-------------------

- In the Press Room, renamed "meltwater" to "MemoNews" #4207 [thomasw]
- Customised the syndication list template to hard-code the
  title to EU-OSHA in the media #4222 [thomasw]


1.4.24 (2012-02-02)
-------------------

- Update the German network dropdown - again [thomasw]

1.4.23 (2012-02-02)
-------------------

- Updated the German Network dropdown [thomasw] 

1.4.22 (2011-12-07)
-------------------

- Bugfix for the practical solutions portlet: the osha_help_center_view can only
  be passed one value for Subject refs #2385 [deroiste]

1.4.21 (2011-12-05)
-------------------

- Display the publication date to everyone [deroiste] #3759
- Anchoring user.gif to the portal root [deroiste] #3937
- Do not link the breadcrumb to Home when on the language root page
  [deroiste] #3756
- Display oshmail newsletters in a fancybox overlay [deroiste] #3762
- Allow the osha_help_center_view to be used in the practical
  solutions FAQ section, also link the practical solutions portlet to
  the main FAQ section [deroiste] #2385
- Implemented the CodeSyntax version of the Newsletter subscription form 
  #3283 [pilz] 
- Exchanged OSHA logos with new versions #3820 [thomasw]
- Added oshnews-view-simple to dislay a News Item's date at the bottom
  instead of in the title (BE request) #3994 [thomasw]


1.4.20 (2011-11-09)
-------------------

- Change the title of the pressroom view, css fixes #3846 [deroiste]
- Changed ram-caching in image and events portlets, to allow for parallel
  use under http and https #3872 [thomasw]
- Change the osha_help_center_view to make the category title a link
  #2385 [deroiste]
- Change the oshnews-view to filter by SEP Subject #3806 [deroiste]

1.4.19 (2011-10-20)
-------------------

- Bugfix for layout of the multimedia-image-details-view when images
  have very long titles refs #1555 [deroiste]