@@ -7,6 +7,8 @@ osha.theme Changelog
 - In the Press Room, renamed "meltwater" to "MemoNews" #4207 [thomasw]
 - Customised the syndication list template to hard-code the
   title to EU-OSHA in the media #4222 [thomasw]
+- Changed the osha_help_center_view so that it doesn't list any FAQs
+  for the practical solutions entry point #2385 [deroiste]
 
 
 1.4.24 (2012-02-02)
